Added summary of analysis

--- a/Student_Data_Challenge.ipynb
+++ b/Student_Data_Challenge.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b9d76875-49a9-4591-83d6-2e784bffcb21",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c73ce640-ae34-4d45-9714-40eb55855d94",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "4        27.5      Public         848324  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "9464841c",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "ab80d5e8-0294-459e-9d68-19d7fe98c75e",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "2292509a-c429-45e2-aa62-bb0397091c76",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "1836"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "95c0c53e-602f-44a0-b72a-3383dcce09fc",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "d04088bb-df5a-47b0-990a-c6127bfc9bfd",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "f1e2d12e-c56d-47bc-b9a0-01f97400c4a3",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
        "Name: grade, Length: 14831, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "29b32018",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
        "Name: grade, Length: 14831, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "09ebbec2-c5a7-49a9-9a21-f86c0f4c3791",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
        "Name: grade, Length: 14831, dtype: int32"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "ac4fc0af-babd-47fb-9962-66727ea0dc28",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
        "max    1.299997e+08     12.000000     100.000000    100.000000  991918.000000"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "d94aa5d1",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
        "64.6757332614119"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "37ecf181",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
        "10.5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "78464611",
    "metadata": {},
    "outputs": [
@@ -667,7 +667,7 @@
        "Name: grade, Length: 14831, dtype: int32"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "ff0fd7cb",
    "metadata": {},
    "outputs": [
@@ -739,7 +739,7 @@
        "2    Wagner High School           89.0        70.4"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "edb8027e",
    "metadata": {},
    "outputs": [
@@ -864,7 +864,7 @@
        "max    1.299997e+08     9.0      99.900000   100.000000  991918.000000"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "e40b203d-6597-487a-82cf-157731148084",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
        "3706        58.4     Charter         870334  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "f4a44f87-acb8-423e-95ca-88e6f644eeb2",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1059,7 @@
        "[569 rows x 2 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "d6c2a244-c8aa-4cf6-a1e2-ddace72666eb",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1083,7 @@
        "74.90038089192191"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "id": "7d665683",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1109,7 @@
        "Name: grade, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "id": "63afc8b1",
    "metadata": {},
    "outputs": [
@@ -1135,7 +1135,7 @@
        "Name: grade, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,16 +1156,16 @@
     "\n",
     "Make comparisons within your data by completing the following steps:\n",
     "\n",
-    "1. Using the `groupby` and `mean` functions, look at the average reading and math scores per school type.\n",
+    "1. Using the `groupby` and `mean` functions, look at the average budget per school type.\n",
     "\n",
     "1. Using the `groupby` and `count` functions, find the total number of students at each school.\n",
     "\n",
-    "2. Using the `groupby` and `mean` functions, find the average budget per grade for each school type."
+    "2. Using the `groupby` and `mean` functions, find the average math scores per grade for each school type."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "8eac115a-c392-446c-ad83-456d0f87eca7",
    "metadata": {},
    "outputs": [
@@ -1217,18 +1217,21 @@
        "Public       911195.558251"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Use groupby and mean to find the average reading and math scores for each school type.\n"
+    "# Use groupby and mean to find the average budget for each school type.\n",
+    "budget_by_type = student_df.groupby(by='school_type').mean(numeric_only=True)\n",
+    "\n",
+    "budget_by_type.loc[:, ['school_budget']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "a3ee96e8-d653-44b1-811f-979880649046",
    "metadata": {},
    "outputs": [
@@ -1345,19 +1348,23 @@
        "Chang High School                 171"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Use the `groupby`, `count`, and `sort_values` functions to find the\n",
-    "# total number of students at each school and sort from most students to least students."
+    "# total number of students at each school and sort from most students to least students.\n",
+    "students_by_school = student_df.groupby(by='school_name').count()\n",
+    "count_by_school = students_by_school.rename(columns={'student_name':'student_count'})\n",
+    "\n",
+    "count_by_school.loc[:, ['student_count']].sort_values(['student_count'], ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "3e9018ab-17db-431d-98ef-0c7195b647bb",
    "metadata": {},
    "outputs": [
@@ -1443,12 +1450,17 @@
        "            12           64.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Use groupby and mean to find the average math score by grade for each school type\n",
+    "math_by_type_grade = student_df.groupby(['school_type', 'grade']).mean(numeric_only=True).round(0)\n",
+    "\n",
+    "math_by_type_grade.loc[:, ['math_score']]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1464,7 +1476,14 @@
    "id": "396f269c-7081-4e43-a203-0a2750b51fa4",
    "metadata": {},
    "source": [
-    "*your summary here*"
+    "### Summary of all data\n",
+    "The dataset of all students within the district appears to have a fairly normal distribution of both reading scores and math scores. The average reading score for all students was 72.4 with the median being 73, with most of the data points being clustered within the 25% to 75% percentiles judging from the the standard deviation. For math scores, 64.7 was the average and 65.3 was the median, with the data being in a similar range as the reading scores.\n",
+    "\n",
+    "### Lowest Math Score\n",
+    "Dixon High School displayed the lowest math score, though more analysis would need to be done to better determine if this is a problem with a particular student or a more widespread issue of all students at that school. Dixon High School is the 3rd largest within the district, the potential relationship of large class size could contribute to a lowering of students' scores, though without data on the teacher count a link cannot be established.\n",
+    "\n",
+    "### Comparison of Charter and Public Schools\n",
+    "For the district, despite Charter Schools receiving on average less funding they display higher math scores on average for most grades other than the 12th graders. It would be useful to examine this further, getting other measures of central tendency as well as the student count between these school types to better analyze what other factors might be influencing this discrepancy, and whether or not it is worth examining what these schools might be providing that could improve scores for the entire district."
    ]
   }
  ],
